2006-03-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/fit.c (splitpath): Reorder tests avoid possible read of
	uninitialized memory.

	* src/alloc.c (gp_alloc): Cast to (generic *)
	(checked_free): Introduced new local variable to reduce number of
	horrible casts.

	* src/hidden3d.c (build_networks): Initialize lp_style from
	lp_properties, regardless of whether the plot supposedly has point
	symbols drawn or not.  Needed because PM3D drops stuff inside that
	struct.

2006-03-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/aquaterm.trm: Correction of misprints.

2006-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_tic_prop): Another bandaid to protect against
	int_error() from inside try_to_get_string().  Bug #1434633.

2006-03-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Reorder code so that mutually exclusive
	conditions are handled in an if/elseif/else construct. No actual change
	in behavior, but it quiets valgrind warning messages.

	* term/post.trm: Prevent segfault if someone passes off an undefined
	variable as an epslatex header.  This is a bandaid rather than a true
	fix, but it's better than segfaulting. The true problem is that an
	int_error() exit from expression parsing bypasses proper cleanup of
	storage for string variables, and also fails to return NULL to the
	caller.  Bug #1434633.

2006-03-15  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (plot_option_comma_separated):   Found by valgrind.
	Set an uninitialized tuple value to 0.0.

	* src/set.c (parse_histogramstyle):   Found by valgrind.
	Set an unitialized text label to EMPTY_LABELSTRUCT

2006-03-11  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/html/index.save demo/html/Makefile: Add animate2 to the list
	of webified examples.

2006-03-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/pm.trm src/term_api.h src/mouse.h src/mouse.c src/plot.c